3 days more to launch

--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -8,7 +8,7 @@
         <material-list *deferredContent id="app-drawer" class="{{appTheme['box']}}" style="overflow-x: hidden; overflow-y: scroll;">
             <div class="text-center py-3 w-50 mx-auto">
                 <div class="card {{appTheme['box-one']}} br-20 py-4 border-0">
-                    <span class="fa fa-user-circle fa-3x {{appTheme['text-colour']}}"></span>
+                    <span class="fa fa-user-circle fa-3x {{appTheme['text-colour']}}" style="display: inline-block !important;"></span>
                 </div>
             </div>
             <div class="dropdwn">
