--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -1,11 +1,12 @@
 <div class="container mt-3 px-md-0" id="post-app" style="height: calc(100vh - 80px)">
     <h5 class="text-center font-weight-bold {{appTheme['text-muted']}} mt-3">Post Accounts</h5>
-    <div class="text-center font-weight-bold figure-caption {{appTheme['text-muted']}} mb-4 separator">Add accounts under any of the sections
+    <div class="text-center font-weight-bold figure-caption {{appTheme['text-muted']}} mb-4 separator">Add accounts
+        under any of the sections
     </div>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3" id="fb">
-            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} mt-0 n-mt-1 br-20">
+            <div class="card border-0 {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header border-0 {{appTheme['box-one']}} mt-0 n-mt-1 br-20">
                     <span class="float-left ml-3 font-weight-bold {{appTheme['text-colour']}}">Facebook</span>
                     <span class="float-right mr-3 fa fa-facebook text-primary mt-1"></span>
                 </div>
@@ -13,14 +14,14 @@
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
                             <button (click)="showPopup(0)"
-                                    class="btn btn-sm in rounded-circle btn-outline-primary br-20 px-3"
+                                    class="btn btn-sm in  btn-outline-primary br-20 px-3"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(0)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
+                                    class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -32,8 +33,8 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
-            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
+            <div class="card border-0 {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3 font-weight-bold {{appTheme['text-colour']}}">Twitter</span>
                     <span class="float-right mr-3 fa fa-twitter text-primary mt-1"></span>
                 </div>
@@ -41,14 +42,14 @@
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
                             <button (click)="showPopup(1)"
-                                    class="btn btn-sm in rounded-circle btn-outline-primary br-20 px-3"
+                                    class="btn btn-sm in  btn-outline-primary br-20 px-3"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(1)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
+                                    class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -59,8 +60,8 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
-            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
+            <div class="card border-0 {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3 font-weight-bold {{appTheme['text-colour']}}">Instagram</span>
                     <span class="float-right mr-3 fa fa-instagram text-danger mt-1"></span>
                 </div>
@@ -68,14 +69,14 @@
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
                             <button (click)="showPopup(2)"
-                                    class="btn btn-sm in rounded-circle btn-outline-danger br-20 px-3"
+                                    class="btn btn-sm in  btn-outline-danger br-20 px-3"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(2)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
+                                    class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -86,22 +87,23 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
-            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
+            <div class="card border-0 {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3 font-weight-bold {{appTheme['text-colour']}}">LinkedIn</span>
                     <span class="float-right mr-3 fa fa-linkedin-in {{appTheme['text-colour']}} mt-1"></span>
                 </div>
                 <div class="card-body m-2">
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
-                            <button (click)="showPopup(3)" class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
+                            <button (click)="showPopup(3)"
+                                    class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(3)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
+                                    class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -114,7 +116,7 @@
     </div>
 </div>
 <div *ngIf="accountTabs[0] || accountTabs[1] || accountTabs[2] || accountTabs[3]"
-     class="dialog-box {{appTheme['box-one']}} card bg-transparent border-0 shadow-c br-20" id="dialog">
+     class="dialog-box {{appTheme['box-one']}} card border-0 shadow-c br-20" id="dialog">
     <div class="card-header bg-transparent border-0 text-center" id="media-icon">
         <div class="nt-circle">
             <img *ngIf="accountTabs[0]" alt="facebook-icon" class="nt-center img-fluid" height="100px"
@@ -172,7 +174,7 @@
 </div>
 
 <div *ngIf="viewTabs[0] || viewTabs[1] || viewTabs[2] || viewTabs[3]"
-     class="dialog-box {{appTheme['box-one']}} card bg-transparent border-0 shadow-c br-20" id="view-dialog">
+     class="dialog-box {{appTheme['box-one']}} card border-0 shadow-c br-20" id="view-dialog">
 
     <div class="font-nyata">
         <div class="text-center font-weight-bold mt-4 {{appTheme['text-colour']}}">
@@ -187,10 +189,12 @@
         <template [ngIf]="viewTabs[0] || viewTabs[2]">
             <div *ngIf="accounts.facebook.isNotEmpty"
                  class="{{appTheme['box-one']}} mb-1 br-20 box {{appTheme['box-two']}} px-2">
-                <div class="card bg-transparent border-0 br-20 shadow mb-2" *ngFor="let email of accounts.facebook; let $i=index" >
+                <div *ngFor="let email of accounts.facebook; let $i=index"
+                     class="card bg-transparent border-0 br-20 shadow mb-2">
                     <div class="card-body border-0 row">
                         <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
-                        <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text" [title]="email.username">
+                        <div [title]="email.username"
+                             class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                             {{ email.username }}
                         </div>
                         <div class="col-3 m-auto text-right">
@@ -210,10 +214,12 @@
         <template [ngIf]="viewTabs[1]">
             <div *ngIf="accounts.twitter.isNotEmpty"
                  class="{{appTheme['box-one']}} mb-1 br-20 box {{appTheme['box-two']}} px-2">
-                <div class="card bg-transparent border-0 br-20 shadow mb-2" *ngFor="let email of accounts.twitter; let $i=index" >
+                <div *ngFor="let email of accounts.twitter; let $i=index"
+                     class="card bg-transparent border-0 br-20 shadow mb-2">
                     <div class="card-body border-0 row">
                         <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
-                        <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text" [title]="email.username">
+                        <div [title]="email.username"
+                             class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                             {{ email.username }}
                         </div>
                         <div class="col-3 m-auto text-right">
@@ -233,10 +239,12 @@
         <template [ngIf]="viewTabs[3]">
             <div *ngIf="accounts.linkedin.isNotEmpty"
                  class="{{appTheme['box-one']}} mb-1 br-20 box {{appTheme['box-two']}} px-2">
-                <div class="card bg-transparent border-0 br-20 shadow mb-2" *ngFor="let email of accounts.linkedin; let $i=index" >
+                <div *ngFor="let email of accounts.linkedin; let $i=index"
+                     class="card bg-transparent border-0 br-20 shadow mb-2">
                     <div class="card-body border-0 row">
                         <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
-                        <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text" [title]="email.username">
+                        <div [title]="email.username"
+                             class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                             {{ email.username }}
                         </div>
                         <div class="col-3 m-auto text-right">
