--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -21,7 +21,7 @@
     </div>-->
     <div class="row justify-content-start mt-3">
         <div class="col-md-10 col-sm-12 col-lg-5" id="create-table" style="margin-bottom: 20px">
-            <div class="card shadow-c c-bordered {{appTheme['border']}} bg-transparent {{appTheme['box-one']}} br-20">
+            <div class="card shadow-c c-bordered {{appTheme['border']}} {{appTheme['box-one']}} br-20">
                 <div class="card-body px-md-4">
                     <form action="#" novalidate>
                         <div class="form-group">
@@ -152,7 +152,7 @@
                                 </div>
                                 <!-- Panel 1 -->
                                 <!-- Panel 2 -->
-                                <div class="tab-pane fade position-relative {{appTheme['box-two']}}" id="panel2" role="tabpanel">
+                                <div class="tab-pane fade in show position-relative {{appTheme['box-two']}}" id="panel2" role="tabpanel">
                                     <div class="container p-2">
                                         <emoji-app (myClick)="setData($event)"></emoji-app>
                                     </div>
@@ -172,7 +172,7 @@
                                                         class="btn btn-primary btn-sm br-20"
                                                         id="tag_button"
                                                         type="button">
-                                                    <span class="font-weight-bold">+</span>
+                                                    <span class="font-weight-bold fa fa-plus"></span>
                                                 </button>
                                             </div>
                                         </form>
@@ -199,7 +199,7 @@
             </div>
         </div>
         <div class="col-md-12 col-sm-12 col-lg-7">
-            <div class="card shadow-c bg-transparent {{appTheme['box-one']}} br-20 px-2 py-4 mb-3 c-bordered {{appTheme['border']}}">
+            <div class="card shadow-c {{appTheme['box-one']}} br-20 px-2 py-4 mb-3 c-bordered {{appTheme['border']}}">
                 <div class="card bg-transparent px-2 border-0 post-table br-20">
                     <div class="card-body">
                         <div class="row c-bordered {{appTheme['box-one']}} {{appTheme['border']}} sticky-top">
@@ -252,7 +252,7 @@
         <span class="figure-caption">If you leave this component</span>
 
         <div class="mt-3 p-0 text-center">
-            <button class="btn btn-sm btn-light br-20 px-4 mr-3" (click)="deleteFinalImages()">
+            <button class="btn btn-sm btn-light br-20 px-4 mr-3" id="okay">
                 <span *ngIf="!isDel">Leave now</span>
                 <span *ngIf="isDel">...</span>
             </button>
