--- a/lib/src/dashboard_component/setting_component/setting_component.html
+++ b/lib/src/dashboard_component/setting_component/setting_component.html
@@ -1,6 +1,6 @@
 <alert *ngIf="setAlert != null" [alert]="setAlert"></alert>
 <div class="container px-md-0" id="settings-app" style="height: 100%;">
-    <div class="m-0 m-md-5 p-2 p-md-5 {{appTheme['box-one']}} br-20 user-section shadow">
+    <div class="mx-0 m-md-5 p-2 p-md-5 {{appTheme['box-one']}} br-20 user-section shadow" style="margin-bottom: 0 !important;">
         <div class="row m-0 mt-2 mb-3 p-0">
             <div class="col-12 m-auto text-center separator">
                 <h5 class="font-weight-bold {{appTheme['text-muted']}}">
